using System.Collections;
using System.Collections.Generic;
using UnityEngine;

namespace PBJ.Configuration
{
	public static class AnimationConst
	{
		public const string FaceX = "FaceX";
		public const string FaceY = "FaceY";
		public const string Moving = "Moving";
		public const string Throw = "Throw";
		public const string Carry = "Carry";
		public const string Pickup = "Pickup";
		public const string Damage = "Damage";
		public const string Death = "Death";
		
		public const string Chomp = "Chomp";
		public const string Open = "Open";
		public const string Close = "Close";
	}
}